01-whoami/whoami.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  replicas: 3
  # pod template
  template:
    metadata:
      name: whoami
      # penser au namespace
      namespace: whoami
      # pattern de labels (futurs selecteurs...)
      labels:
        # name: whoami vs app.kubernetes.io/name: whoami
        # pattern de labels recommandée par kubernetes
        app.kubernetes.io/name: whoami
        # labels personnalisés
        # strategie de versioning, ciblage
        version: "2.0"
        group: backend
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
